--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -19,9 +19,9 @@ builds:
     env:
       - CGO_ENABLED=0
     goos:
-      # - linux
+      - linux
       - windows
-      # - darwin
+      - darwin
 
 archives:
   - format: tar.gz
